# PROPS-Relation-Dataset

./: .gitignore  PROPSRelationDataset.py  PROPSRelationDataset_old.py  README.md  pyproject.toml
objects/: train_relations.pt
rob599/: ProgressObjectsDataset.py  __init__.py
src/props_relation_dataset/: BaseRelationDataset.py  LMRelationDataset.py  PropsRelationDataset.py  PropsRelationDatasetOld.py
src/props_relation_dataset.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/props_relation_dataset/datasets/: PROPSPoseDataset.py  __init__.py
src/props_relation_dataset/utils/: __init__.py  data.py
