[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "props_relation_dataset"
version = "1.0.0"
authors = [
  { name="Jace Aldrich", email="jacealdr@umich.edu" },
  { name="Ariana Verges Alicea", email="alarian@umich.edu" },
  { name="Hannah Ho", email="hdho@umich.edu" },
]
description = "Props relation dataset for SORNET or other spatial relation networks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Jaldrich2426/PROPS-Relation-Dataset"
"Bug Tracker" = "https://github.com/Jaldrich2426/PROPS-Relation-Dataset/issues"

[tool.black]
line-length = 100
extend-exclude = "deprecated/"
experimental-string-processing = true

# See the `setuptools_scm` documentation for the description of the schemes used below.
# https://pypi.org/project/setuptools-scm/
# NOTE: If these values are updated, they need to be also updated in `srl/__init__.py`.
[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "dirty-tag"

[tool.isort]
# Multi line output mode 3 is used to conform with Black. See
# https://github.com/PyCQA/isort#multi-line-output-modes
multi_line_output = 3
profile = "black"
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third Party"
import_heading_localfolder = "Local Folder"
line_length = 100

[tool.pytest.ini_options]
norecursedirs = [".git", ".venv", "deprecated", "dist"]
python_files = ["*_test.py"]

[tool.coverage.report]
# NOTE: Single-quoted strings are required in TOML for regular expressions
exclude_lines = [
	"pragma: no cover", # Need to re-enable the standard no cover match
	'^\s*pass\s*$',  # Skip any pass lines
]

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true
exclude = [
	"venv",
]

[[tool.mypy.overrides]]
module = [
	"importlib.metadata",
	"setuptools",
	"setuptools_scm",
]
ignore_missing_imports = true
